# DataIngest

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
mappings/: clay.yml  parts_inventory.yml  qualification.yml  telemetry.yml
plan/: 00-master-plan.md  01-references.md  02-decisions.md
src/dataingest/: _plugins.py  cleaners.py  cli.py  config.py  errors.py  infer.py  inspect.py  manifest.py  pipeline.py  uri.py
src/dataingest/sinks/: __init__.py  _base.py  postgres.py  sqlite.py
src/dataingest/sources/: __init__.py  csv.py  xlsx.py
tests/: conftest.py  test_chunking.py  test_cleaners.py  test_cli.py  test_config.py  test_csv_source.py  test_e2e.py  test_e2e_clay.py  test_errors.py  test_infer.py  test_inspect.py  test_manifest.py  test_plugins.py  test_postgres_sink.py  test_registry.py  test_sqlite_sink.py  test_uri.py  test_xlsx_source.py
tests/fixtures/: clay_sample.csv  parts_inventory_sample.csv  qualification_sample.csv  telemetry_sample.csv
