[project]
name = "dataingest"
version = "0.1.0"
description = "Config-driven CSV → SQL ingestion tool with declarative schema mappings."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Andrean Reyes" }]
requires-python = ">=3.11"
keywords = ["etl", "csv", "ingestion", "data", "pipeline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
]

[project.scripts]
dataingest = "dataingest.cli:app"

[project.urls]
Homepage = "https://github.com/a-s-reyes/DataIngest"
Issues = "https://github.com/a-s-reyes/DataIngest/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dataingest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF", "SIM", "PTH"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
